# bouncer

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  bouncer.db  pyproject.toml
.github/workflows/: release.yml
bouncer/: __init__.py  __main__.py  bouncer.py  database_manager.py  generative_ai.py  generative_ai_gemini.py  generative_ai_ollama.py  generative_ai_openai.py
configs/: bouncer.example.yaml  bouncer.yaml
contrib/: bouncer.service
src/: config.rs  error.rs  i18n.rs  llm.rs  main.rs  stats.rs  storage.rs  telegram.rs  verification.rs
src/locales/: en.toml  zh-CN.toml
tests/: test_database_manager.py
