[package]
name = "bouncer"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-openai = { version = "0.36", features = ["chat-completion"] }
clap = { version = "4", features = ["derive"] }
jiff = { version = "0.2", features = ["serde"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
rusqlite = { version = "0.39", features = ["bundled"] }
rusqlite_migration = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
teloxide = { version = "0.17", default-features = false, features = ["ctrlc_handler", "macros", "rustls"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[profile.release]
strip = "symbols"
lto = "fat"
codegen-units = 1
