[project]
name = "bouncer"
description = "Telegram bot to manage group chat user join requests"
authors = [{ name = "k4yt3x", email = "i@k4yt3x.com" }]
dependencies = ["python-telegram-bot>=21.10", "loguru>=0.7.3", "pyyaml>=6.0.2", "ollama>=0.4.7", "google-genai>=1.2.0", "sqlalchemy>=2.0.38", "openai>=1.69.0"]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
dynamic = ["version"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.isort]
profile = "black"

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "file"
path = "bouncer/__init__.py"


[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "Faker>=36.1.1",
]
